--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My ESLint configuration.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"WARNIGN: No build script provided!\""
   },
   "repository": {
     "type": "git",
