--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Build package and upload to npm
+name: Publish to npm on release
 
 on:
   workflow_dispatch:
@@ -9,33 +9,33 @@ on:
     types: [created]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 19
-      - run: npm ci
-      - run: npm run build
-      - run: npm pack
-      - uses: actions/upload-artifact@v3.1.2
-        with:
-          path: nandertga-eslint-config-*.tgz
-
   publish-npm:
     permissions:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
         with:
-          node-version: 19
+          node-version: 18
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm run build
-      - run: npm publish --provenance
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Generate a tarball from the build results
+        run: npm pack
+
+      - name: Upload the tarball as an artifact
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          path: nandertga-eslint-config-*.tgz
+
+      - name: Publish to NPM
+        run: npm publish --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
