--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "url": "https://github.com/NanderTGA/eslint-config/issues"
   },
   "homepage": "https://github.com/NanderTGA/eslint-config#readme",
-  "peerDependencies": {
+  "dependencies": {
     "eslint": "^8.43.0",
     "eslint-plugin-jsdoc": "^46.2.6",
     "eslint-plugin-jsonc": "^2.9.0",
     "jsonc-eslint-parser": "2.3.0",
+    "typescript": "^5.2.2",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0"
   }
