style(package.json): remove empty line

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "2.0.0",
   "description": "My ESLint configuration.",
   "main": ".eslintrc.cjs",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NanderTGA/eslint-config.git"
