--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@typescript-eslint/parser": "^5.62.0",
     "eslint-plugin-jsdoc": "^46.5.0",
     "eslint-plugin-jsonc": "^2.9.0",
-    "jsonc-eslint-parser": "2.3.0",
+    "jsonc-eslint-parser": "2.3.0"
+  },
+  "peerDependencies": {
     "eslint": "^8.48.0",
     "typescript": "^5.2.2"
   }
